--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "daisyui": "^4.11.1",
+    "date-fns": "^3.6.0",
     "dialog-polyfill": "^0.5.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
